--- a/templates/security/registration.html.twig
+++ b/templates/security/registration.html.twig
@@ -20,7 +20,7 @@
 		{{ form_widget(form) }}
 
 		<button type="submit" class="btn btn-success">Enregistrer !</button>
-		<a href="{{ path('security_login')}}"class="btn btn-info">Annuler</a>
+		<a href="{{ path('login')}}"class="btn btn-info">Annuler</a>
 
 		{{ form_end(form) }}
 	</div>
