--- a/templates/utilisateur/edit.html.twig
+++ b/templates/utilisateur/edit.html.twig
@@ -7,9 +7,17 @@
 {% block body %}
 	
 	<div class="container form">
-    	<h1 class="text-center">Modifier vos informations</h1>
+    	<h1 class="intro">Modifier vos informations</h1>
     <div class="line-title"></div>
     	{{ form_start(form) }}
+
+    	{{ form_row(form.password, {'label': 'Mot de passe', 'attr':{'placeholder': 'Mot de passe'}}) }}
+		
+		{{ form_row(form.confirm_password, {'label': 'Confirmation', 'attr':{'placeholder': 'Confirmez votre mot de passe '}}) }}
+
+		{{ form_row(form.radio, {'attr':{'placeholder': 'Nom de votre media'}}) }}
+
+		{{ form_row(form.version, {'label': 'Version de votre logiciel'}) }}
 
     	{{ form_widget(form) }}
 
