--- a/templates/utilisateur/profil.html.twig
+++ b/templates/utilisateur/profil.html.twig
@@ -3,10 +3,16 @@
 {% block title %}Mes informations{% endblock %}
 
 {% block body %}
-
-        <div class="center">
-                <a href="{{ path('current_user_edit') }}">Modifier l'utilisateur</a>   
-                <a href="{{ path('utilisateur_delete') }}">Supprimer</a>
-        </div>
-
+	<div class"info">
+		<h1 class="intro">Mes informations</h1>
+			<div class="container">
+				<p>Nom d'utilisateur {{ utilisateur.username }}</p>
+				<p>Votre radio: {{ utilisateur.radio }}</p
+				>
+    <div class="center">
+        <a href="{{ path('current_user_edit') }}">Modifier mes informations</a>   
+        <a href="{{ path('utilisateur_delete') }}">Supprimer mon compte</a>
+    </div>
 {% endblock %}
+
+
