--- a/templates/utilisateur/edit.html.twig
+++ b/templates/utilisateur/edit.html.twig
@@ -11,6 +11,8 @@
     <div class="line-title"></div>
     	{{ form_start(form) }}
 
+        {{ form_row(form.username, {'label': 'Nom d\'utilisateur','attr':{'placeholder': 'Nom d\'utilisateur'}}) }}
+
     	{{ form_row(form.password, {'label': 'Mot de passe', 'attr':{'placeholder': 'Mot de passe'}}) }}
 		
 		{{ form_row(form.confirm_password, {'label': 'Confirmation', 'attr':{'placeholder': 'Confirmez votre mot de passe '}}) }}
@@ -21,7 +23,9 @@
 
     	{{ form_widget(form) }}
 
-    		<button type="submit" class="btn btn-success mt-4">Sauvegarder !</button>
+    		<button type="submit" class="btn btn-success mt-4">Sauvegarder</button>
+            
+            <a href="{{ path('profil')}}"class="btn btn-info">Annuler</a>
 
     	{{ form_end(form) }}
     </div>
