--- a/templates/utilisateur/profil.html.twig
+++ b/templates/utilisateur/profil.html.twig
@@ -6,9 +6,11 @@
 	<div class"info">
 		<h1 class="intro">Mes informations</h1>
 			<div class="container">
-				<p>Nom d'utilisateur {{ utilisateur.username }}</p>
-				<p>Votre radio: {{ utilisateur.radio }}</p
-				>
+				<div class="center">
+					<p>Nom d'utilisateur: {{ utilisateur.username }}</p>
+					<p>Nom de votre média: {{ utilisateur.radio }}</p>
+					<p>Version de votre WinMedia {{ utilisateur.version.version }}</p>
+				</div>
     <div class="center">
         <a href="{{ path('current_user_edit') }}">Modifier mes informations</a>   
         <a href="{{ path('utilisateur_delete') }}">Supprimer mon compte</a>
