--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}WinScript{% endblock %}</title>
         {% block stylesheets %}
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous"
         <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet">
         <link href="{{ asset('css/style.css') }}" rel="stylesheet">
         {% endblock %}
@@ -20,7 +21,7 @@
                     <a class="nav-link" href="#">Tutoriel</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Générateur</a>
+                    <a class="nav-link" href="{{ path('type') }}">Générateur</a>
                  </li>
             </ul>
         </div>
