--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,14 +4,18 @@
         <meta charset="UTF-8">
         <title>{% block title %}WinScript{% endblock %}</title>
         {% block stylesheets %}
+         <link href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" rel="stylesheet">
         <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet">
-        <link href="{{ asset('css/style.css') }}" rel="stylesheet">
+        <link href="{{ asset('css/login.css') }}" rel="stylesheet">
         {% endblock %}
 {% block body %}
+<body>
 	<div class="container">
 		<div class="center">
 			<img src="../../img/logo.png" alt="Logo" style="width:300px">
 		</div>
+	</div>
+	<div class="container-form">
 		<form action="{{ path('login_check') }}" method="post">
 			<div class=form-group">
 				<input placeholder="Nom d'utilisateur" required name="_username" type="text" class="form-control">
@@ -25,12 +29,11 @@
 			</div>
 		</form>
 	</div>
+</body>
 {% endblock %}
-      <footer class="footer mt-5 ">
-        <div class="container">
-          <span class="text-muted"><center>WinScript 2018.</center></span>
-        </div>
-      </footer>
-      {% block javascripts %}{% endblock %}
-    </body>
+<footer class="footer mt-5 ">
+    <div class="container">
+        <span class="text-muted"><center>WinScript 2018.</center></span>
+    </div>
+</footer>
 </html>
