--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -31,6 +31,7 @@
 	</div>
 </body>
 {% endblock %}
+<footer>
 <footer class="footer mt-5 ">
     <div class="container">
         <span class="text-muted"><center>WinScript 2018.</center></span>
