--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,13 @@
 body {
 margin:0;
 padding:0;
-background-color: #222;  
+background-color: #222; 
+display: flex;
+flex-direction: column;
+height: 100vh; 
+}
+main {
+  flex: 1;
 }
 h1.intro {
   color: white;
